# agilang

./: .gitignore  AGS_LIVE_DATA.md  AGS_TEMPLATES.md  API_GUIDE.md  APP_STRUCTURE.md  CHANGELOG.md  CLI_INSTALL.md  CLI_REFERENCE.md  CUSTOMIZATION.md  DATABASE_GUIDE.md  DEBUGGING_ERRORS.md  DEPLOYMENT_GUIDE.md  DEVICE_OS_INSTALLATION.md  DOCUMENTATION_SCAN_REPORT.md  GITHUB_PUBLISHING_GUIDE.md  JLAB_UI_KIT_INTEGRATION.md  LICENSE  MANIFEST.in  PAYMENTS_EXAMPLES.md  PRODUCTION_COMPLETION_V23.md  README.md  SECURITY.md  SECURITY_GUIDE.md  SOCIAL_BLOG_NEWS_DATING_SUITE.md  SOCIAL_NETWORK_ENGINE.md  SPLIT_FILE_ARCHITECTURE.md  SYNTAX_REFERENCE.md  VALIDATION_REPORT.md  WEB_APP_GUIDE.md  WIKI.md  install.py  installer.ps1  pyproject.toml
agilang/: __init__.py  __main__.py  _rpc_legacy.py  agirecord.py  agirecord_indexed.py  ai.py  ai_benchmarks.py  ai_platform.py  ai_runtime_generator.py  aiflow.py  aiflow_full.py  aiflow_native.py  aiflow_native_v2.py  ast_nodes.py  audio_reader.py  backends.py  beacon.py  beacon_attestation.py  beacon_engine.py  beacon_fork_choice.py  beacon_penalty.py  beacon_state.py  beacon_status.py  beacon_store.py  beacon_validator.py  blockchain.py  blockchain_nonce_mempool_patch.py  blockchain_runtime_gateway.py  bpe_tokenizer.py  c_backend.py  cgi_runtime.py  checker.py  cli.py  cli_runtime.py  cnn_batch_trainer.py  cnn_layers.py  cnn_optimizers.py  cnn_training_loop_v1.py  cnn_training_loop_v2.py  config.py  (+55 more)
config/: beacon.example.json  chain-services.example.json  rpc.production.example.json  validator-keys.example.json
deployment/: CADDY.md  NGINX.md
docs/: AGILANG_AGS_TEMPLATE_DEEP_REFERENCE.md  AGILANG_AI_BLOCKCHAIN_DEEP_REFERENCE.md  AGILANG_BEGINNER_TO_PROFESSIONAL_WIKI.md  AGILANG_CLI_AND_DEVELOPER_WORKFLOW_REFERENCE.md  AGILANG_DOCS_AI_CLEAN_ASK.md  AGILANG_DOCS_AI_QA_AND_CODE_DEMO.md  AGILANG_DOCS_AI_TRAINING_TEST.md  AGILANG_DOCUMENTATION_INDEX.md  AGILANG_ERROR_DEBUGGING_DEEP_REFERENCE.md  AGILANG_PRODUCTION_SECURITY_BATTLE_TEST_2026.md  AGILANG_PROGRAMMING_BOOK.md  AGILANG_SYNTAX_AND_STDLIB_DEEP_REFERENCE.md  AGILANG_V11_RUNBOOK.md  AGILANG_WEB_DATABASE_AUTH_DEEP_REFERENCE.md  AGILANG_WEB_SHOWCASE.md  AGI_MEET_CAMERA_ERROR_AND_AUDIO_FIX.md  AGI_MEET_PRO_ZOOM_STYLE_APP.md  AIFLOW_100_PERCENT_PLATFORM_LAYER.md  AIFLOW_70_PERCENT_PLATFORM_UPGRADE.md  AIFLOW_CNN_LAYER_INTEGRATION.md  AIFLOW_CNN_OPTIMIZERS.md  AIFLOW_CNN_TRAINING_LOOP_V1.md  AIFLOW_CNN_TRAINING_LOOP_V2.md  AIFLOW_FINAL_EXECUTION_LAYER.md  AIFLOW_FULL_REPLACEMENT_ROADMAP.md  AIFLOW_MULTICHANNEL_CONV2D_TRAINING.md  AIFLOW_NATIVE_AUTODIFF_INTEGRATION.md  AIFLOW_NATIVE_V2.md  AIFLOW_NATIVE_VISION_KERNELS.md  AIFLOW_PRODUCTION_UPGRADE.md  AIFLOW_RGB_VISION_CLASSIFIER.md  AIFLOW_TENSORFLOW_REPLACEMENT.md  AI_ML_TOOLKIT.md  AI_ML_TRAINING_TOOLKIT.md  APPLICATIONS_AND_STARTERS.md  (+46 more)
docs-site/: index.html  style.css
(+135 files in other folders)
