[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agilang"
version = "2.1.0"
description = "AGILANG runtime and blockchain development toolkit."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "AGILANG Project" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
]
dependencies = []

[project.optional-dependencies]
data = ["numpy", "scikit-learn", "matplotlib", "requests"]
dev = ["pytest", "bandit[toml]", "pip-audit", "ruff"]

[project.scripts]
agilang = "agilang.cli_runtime:main"
agi = "agilang.cli_runtime:main"

[tool.setuptools]
packages = ["agilang", "agilang.native"]
include-package-data = true

[tool.setuptools.package-data]
"agilang.native" = ["*.c", "*.h", "prebuilt/*/*", "prebuilt/*/*.so", "prebuilt/*/*.dll", "prebuilt/*/*.dylib", "prebuilt/*/*.a", "prebuilt/*/*.o", "prebuilt/*/*.json", "prebuilt/*/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.bandit]
skips = ["B101"]
exclude_dirs = ["tests", "examples"]

[tool.ruff]
line-length = 120
